--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,15 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
+
+    <meta name="description" content="Web site created using create-react-app"/>
+    <meta name="author" content="Little Lemon Restaurant"/>
+
+    <meta name="og:title" content="Little Lemon Restaurant"/>
+    <meta name="og:description" content="A family-owned Mediterranean restaurant, focused on traditional recipes served with a modern twist."/>
+    <meta name="og:image" content="../src/assets/Logo.svg"/>
+    <meta name="og:url" content=""/>
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
